--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,3 +32,12 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.portfolio-image {
+    max-width: 50%;
+    max-height: 50%;
+    /* height: auto; */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
