--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,3 +41,12 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.portfolio-badge {
+    max-width: 10%;
+    max-height: 10%;
+    /* height: auto; */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
